# Mini-Arima

./: bot.py  requirements.txt
app/: config.py  database.py  middlewares.py  states.py
app/handlers/: admin.py  chat.py  common.py  group.py  image_gen.py  settings.py  subscription.py
app/keyboards/: callbacks.py  inline.py
app/services/: ai_service.py  system_service.py  user_service.py
telegram_bot_rust/: Cargo.toml
telegram_bot_rust/src/: ai_service.rs  config.rs  db.rs  keyboards.rs  main.rs  states.rs  system_service.rs  user_service.rs
telegram_bot_rust/src/handlers/: callback_handlers.rs  common_handlers.rs  mod.rs
