[package]
name = "telegram_bot_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "sqlite", "chrono", "macros" ] }
dotenv = "0.15"
teloxide = { version = "0.12", features = ["macros", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
cached = { version = "0.49", features = ["proc_macro"] }
clap = { version = "4", features = ["derive"], optional = true }
